# lab07-cuda-images-alxdavids

./: CMakeLists.txt  README.md
datasets/ImageBlur/0/: output.ppm
datasets/ImageColorToGrayscale/0/: output.ppm
datasets/ImageColorToGrayscale/1/: output.ppm
datasets/ImageColorToGrayscale/2/: output.ppm
datasets/ImageColorToGrayscale/3/: output.ppm
include/: container_ops.h
libwb/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: CMakeLists.txt  card_info.cu  image_blur.cu  image_color_to_grayscale.cu
test/: CMakeLists.txt  image_color_to_grayscale_test.cu
